@@ -1959,10 +1959,21 @@
   </module>
   <module name="gnomeradio">
     <version release="gnome-2.0-extras">
-      <component name="gnomeradio" dir="gnome-i18n">
-	<podir dir="extra-po/gnomeradio"/>
+      <component name="gnomeradio" dir="gnomeradio">
+	<podir dir="po"/>
 	<potname name="gnomeradio.pot"/>
 	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
+      </component>
+    </version>
+    <version release="gnome-2.1-extras">
+      <component name="gnomeradio" dir="gnomeradio">
+	<podir dir="po"/>
+	<potname name="gnomeradio.pot"/>
+	<branch name="HEAD"/>
+	<regenerate/>
+	<download/>
       </component>
     </version>
   </module>
