@@ -1,3 +1,8 @@
+2003-01-08  Christian Rose  <menthos@menthos.com>
+
+	* translation-status.xml: gnomeradio has moved to gnome cvs.
+	Changed reference accordingly.
+
 2003-01-02  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: Moved gcompris to 2.1-extras.
